fixed layout issues

--- a/src/javascripts/components/eat/eat.scss
+++ b/src/javascripts/components/eat/eat.scss
@@ -4,6 +4,8 @@
   width: $quad-width;
   background-color: pink;
   height: $quad-height;
+  margin-top: 50px;
+  margin-left: 0px;
 }
 
 #progress-container {
