--- a/src/javascripts/components/sleep/sleep.scss
+++ b/src/javascripts/components/sleep/sleep.scss
@@ -5,6 +5,7 @@
     width: $quad-width;
     height: $quad-height;
     background-color: lightblue;
+    float: right;
 }
 
 #sleep-progress-container {
